Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76286

jsruntime/qv4memberdata.cpp:75:15: error: comparison of integer expressions of different signedness: ‘size_t’ {aka ‘long unsigned int’} and ‘int’ [-Werror=sign-compare]

XMLWordPrintable

    • 75075e4ef2b6f7f8de8f4baa12668f728545e697 (qt/qtdeclarative/5.12)

      https://codereview.qt-project.org/c/qt/qt5/+/264315 Update submodules on '5.12' in qt5 - PS3

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1559943189

      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/ad0f708dcd523d3ba8da83ec18b0699b8435f732/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-6530a4DisableTests/abe7dbca5e1d0f684a76ca6fda7f78a81aa3363a/build_1559945813/log.txt.gz

      agent:2019/06/07 22:19:48 build.go:197: jsruntime/qv4memberdata.cpp: In static member function ‘static QV4::Heap::MemberData* QV4::MemberData::allocate(QV4::ExecutionEngine*, uint, QV4::Heap::MemberData*)’:
      agent:2019/06/07 22:19:48 build.go:197: jsruntime/qv4memberdata.cpp:75:15: error: comparison of integer expressions of different signedness: ‘size_t’ {aka ‘long unsigned int’} and ‘int’ [-Werror=sign-compare]
      agent:2019/06/07 22:19:48 build.go:197:    75 |     if (alloc > std::numeric_limits<int>::max())
      agent:2019/06/07 22:19:48 build.go:197:       |         ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      

        For Gerrit Dashboard: QTBUG-76286
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes