Avoid number conversion issue

Change-Id: Ia3f9bde43719859104759033283e697be72f7f53
Fixes: QTBUG-76286
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>